# secS-daemon

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: ffi.rs  lib.rs  tunnel.rs  zk.rs
docs/: announcement-thread.md
examples/: hello-world.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs  session.rs
