[package]
name = "libsec-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { version = "2.1", default-features = false }
x25519-dalek = { version = "2.0", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
rs_merkle = { version = "1.4", default-features = false }
uniffi = "0.25"
wasm-bindgen = { version = "0.2", default-features = false }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }
